--- a/profiles/templates/platform/base.html
+++ b/profiles/templates/platform/base.html
@@ -76,6 +76,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/js/tempusdominus-bootstrap-4.min.js" integrity="sha256-z0oKYg6xiLq3yJGsp/LsY9XykbweQlHl42jHv2XTBz4=" crossorigin="anonymous"></script>
 
     <script src="{% static 'assets/js/profiles.js' %}"></script>
+    <script src="{% static 'assets/js/observers.js' %}"></script>
 
     <script>
     $(function () {
