--- a/profiles/templates/profiles/cards/player/latest_games_card.html
+++ b/profiles/templates/profiles/cards/player/latest_games_card.html
@@ -4,7 +4,7 @@
 
 <div class="card">
     <div class="card-body ">
-        <h2 class="card-title">{% trans "Ostanie mecze"%}</h2>
+        <h2 class="card-title">{% trans "Ostatnie mecze"%}</h2>
         <h6 class="card-subtitle mb-2 text-muted"></h6>
         <div class="card-text text-center">
             {% if last_games %}
