--- a/profiles/templates/profiles/cards/player/about_card.html
+++ b/profiles/templates/profiles/cards/player/about_card.html
@@ -22,7 +22,7 @@
             </div>
 
             <div class="card-text">
-            <h2 class="mt-3 card-title">{% trans 'Wspólpraca' %} </h2>
+            <h2 class="mt-3 card-title">{% trans 'Współpraca' %} </h2>
                 {% include template with key=_('Imie i nazwisko trenera')  value=profile.address|default:'-'         %}
                 {% include template with key=_('Adres ')                   value=profile.address|default:'-'         %}
             </div>  <!-- end of card-text-->
