--- a/soccerbase/templates/soccerbase/tables/coaches_card.html
+++ b/soccerbase/templates/soccerbase/tables/coaches_card.html
@@ -7,15 +7,15 @@
 <div class="card" style="">
   <div class="card-header d-md-none">
     <span> <img class="flag" src="{{ object.profile.country.flag }}" alt="flag">{{object.first_name|upper}} {{ object.last_name|upper}} {{ object.profile.age|default:'-' }} {% if object.profile.age %}{% trans 'l.' %} {% endif %} {% if object.is_verified %}<i class="text-success icofont-verification-check"></i>{% endif %}
-    <span class="float-right"> <a href="#" class="">Obserwój</a> </span>
+    <span class="float-right"> {% observed_link user object %} </span>
   </div>
   <div class="d-md-none">
-    <img class="avatar rounded-circle img-responsive" title="profile picture"  src="{% thumbnail show_user.picture|default:'default_profile.png' 'tables_avatar_show_small' %}">
+    <img class="avatar rounded-circle img-responsive"   src="{% thumbnail show_user.picture|default:'default_profile.png' 'tables_avatar_show_small' %}">
   </div>
   <div class="card-body"> 
   <div class="row no-gutters">
         <div class="d-none d-md-inline col-md-1">
-            <img class="avatar rounded-circle img-responsive" title="profile picture"  src="{% thumbnail show_user.picture|default:'default_profile.png' 'tables_avatar_show_small' %}">
+            <img class="avatar rounded img-responsive"  src="{% thumbnail show_user.picture|default:'default_profile.png' 'tables_avatar_show_medium' %}">
         </div>
 
         <div class="d-none d-md-inline col-md-1">
@@ -27,45 +27,33 @@
         </div >
         
         <div class="col-3 col-md-1">
-            {{ object.profile.get_position_raw_display|default:'-' }}
+            {{ object.profile.display_team|default:'-' }}
         </div >
         
         <div class="col-3 col-md-1">
-            {{ object.profile.league|default:'-'|upper  }}
+            {{ object.profile.display_voivodeship|default:'-'|upper  }}
         </div >
 
         <div class="col-3 col-md-1"> 
-            {{ object.profile.team|default:'-'|upper  }}
+            {{ object.profile.address|default:'-'|upper }}
         </div>
 
         <div class="col-3 col-md-1">
-             {{ object.profile.voivodeship|default:'-'|upper|truncatechars:10 }}
+             {{ object.profile.stats|default:'0-0-0'|upper}}
         </div>
 
         <div class="col-3 col-md-1 stats">  
-            <span class="main-color">{{ object.profile.playermetrics.season_summary.team_goals|default:'0' }}</span> gole
-        </div>
-
-        <div class="col-3 col-md-1 stats"> 
-            <span class="main-color stats">{{ object.profile.playermetrics.season_summary.first_squad_games_played|default:'0' }}</span>  w pierwszym składzie 
-        </div>
-
-        <div class="col-3 col-md-1 stats">
-            <span class="main-color">{{ object.profile.playermetrics.season_summary.games_played|default:'0' }}</span>  mecze     
-        </div>
-
-        <div class="col-3 col-md-1 stats">
-            <span class="main-color">{{ object.profile.playermetrics.season_summary.minutes_played |default:'0' }}</span>  minuty
+           {{ object.profile.stats.avg|default:'0'|upper }}
         </div>
 
         <div class="d-none d-md-inline col-md-1">
-           {% profile_link object %}
+           {% profile_link object checks=False %}
+           {% observed_link user object %}
         </div>
     </div>
   </div>
   <div class="card-footer  d-md-none">
-  {% profile_link object %}
-    <span class="float-right"> {% profile_link object %}
+    <span class="float-right"> {% profile_link object checks=False %}
     </span>
   </div>
 </div>
