--- a/soccerbase/templates/soccerbase/tables/players_card.html
+++ b/soccerbase/templates/soccerbase/tables/players_card.html
@@ -2,13 +2,13 @@
 {% load static %}
 {% load thumbnail %}
 {% load playmaker %}
-
+{% spaceless %}
 
 {% for object in objects %}
 <div class="card item-card" style="">
   <div class="card-header d-md-none">
     <span> <img class="flag" src="{{ object.profile.country.flag }}" alt="flag">{{object.first_name|upper}} {{ object.last_name|upper}} {{ object.profile.age|default:'-' }} {% if object.profile.age %}{% trans 'l.' %} {% endif %} {% if object.is_verified %}<i class="text-success icofont-verification-check"></i>{% endif %}
-    <span class="float-right"> <a href="#" class="">Obserwuj</a> </span>
+    <span class="float-right"> {% observed_link user object %} </span>
   </div>
   <div class="d-md-none">
     <img class="avatar rounded-circle img-responsive" title="profile picture"  src="{% thumbnail object.picture|default:'default_profile.png' 'tables_avatar_show_small' %}">
@@ -61,14 +61,16 @@
 
         <div class="d-none d-md-inline col-md-1">
               <span class="float-right"> 
-               {% profile_link object %}
+                {% profile_link object checks=False %}
+                {% observed_link user object %}
+               </span>
 
         </div>
     </div>
   </div>
   <div class="card-footer  d-md-none">
     <span class="float-right"> 
-        {% profile_link object %}
+        {% profile_link object checks=False %}
    
    
   </div>
@@ -76,3 +78,4 @@
 {% endfor %}
 
 
+{% endspaceless %}
