--- a/backend/static/assets/css/tables.css
+++ b/backend/static/assets/css/tables.css
@@ -14,11 +14,11 @@ select.form-control option:checked { color: #0AD; }
 #tables {
     padding-top: 15px;
 }
-#table-filters select {
+#table-filters select, #table-filters input {
     padding:2px 6px;
 }
 
-#tables, #table-filters select {
+#tables, #table-filters select, #table-filters input {
     font-size:.9em;
 }
 
@@ -127,7 +127,7 @@ section.tables {
     #table-filters .filter{
         padding:2px 2px;
     }
-    #tables, #table-filters select{
+    #tables, #table-filters select, #table-filters input{
         font-size:.7em;
         padding:.2rem;
     }
