--- a/soccerbase/templates/soccerbase/tables/filters/player.html
+++ b/soccerbase/templates/soccerbase/tables/filters/player.html
@@ -21,10 +21,10 @@
                     </div>
                     
                     <div class="col filter"> 
-                        <input type="text" value="{{ request.GET.age_min }}" name="age_min" placeholder="wiek od">
+                        <input class="form-control" type="text" value="{{ request.GET.age_min }}" name="age_min" placeholder="wiek od">
                     </div>
                     <div class="col filter"> 
-                        <input type="text" value="{{ request.GET.age_max }}" name="age_max" placeholder="wiek do">
+                        <input class="form-control" type="text" value="{{ request.GET.age_max }}" name="age_max" placeholder="wiek do">
                     </div>
                     <div class="col filter"> 
                             <select name="position" class="form-control">
