observers + requests modereated

--- a/profiles/templates/platform/base.html
+++ b/profiles/templates/platform/base.html
@@ -77,7 +77,7 @@
 
     <script src="{% static 'assets/js/profiles.js' %}"></script>
     <script src="{% static 'assets/js/observers.js' %}"></script>
-
+    <link href="{% static 'assets/css/tables.css' %}" rel="stylesheet">
     <script>
     $(function () {
         $('[data-toggle="tooltip"]').tooltip()
