--- a/profiles/templates/profiles/cards/_base_account_card.html
+++ b/profiles/templates/profiles/cards/_base_account_card.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load thumbnail %}
 {% load playmaker %}
-
+{% spaceless %}
 <div class="card profile-card account-card">
   <div class="card-body">
     <div class="row card-text">
@@ -117,3 +117,4 @@
     </div>
   </div>
 </div>  <!--end of card -->
+{% endspaceless %}
