--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -2,7 +2,7 @@
 {% load wagtailcore_tags %}
 <!DOCTYPE html>
 <html lang="en">
-
+{% spaceless %}
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -173,3 +173,5 @@ $(document).ready(function(){
 </body>
 
 </html>
+
+{% endspaceless %}
