--- a/profiles/templates/profiles/show_player_profile.html
+++ b/profiles/templates/profiles/show_player_profile.html
@@ -17,6 +17,7 @@
 
 
 {% block content %}  <!-- @todo frontend to be renovated to adjust template-->
+{% spaceless %}
 <section id="profile" class="profile  mt-5 mt-md-0">
   <div class="container-fluid profile-container" data-aos="fade-up">
 
@@ -32,6 +33,7 @@
 
   </div>
 </section>
+{% endspaceless %}
 {% endblock content %}
 
 
