--- a/users/templates/account/partials/_signup.html
+++ b/users/templates/account/partials/_signup.html
@@ -1,10 +1,12 @@
 {% load i18n %}
 
+
+{% spaceless %}
     {% with request.GET.role as role %}      
-      <form id="signup_form{{form_type}}" class="signup-form needs-validation" method="post" action="{% url 'account_signup' %}{% if role %}?role={{role}}{% endif %}">  
+      <form id="signup_form{{form_type}}" class="row signup-form needs-validation" method="post" action="{% url 'account_signup' %}{% if role %}?role={{role}}{% endif %}">  
       {% csrf_token %}
-      <div class="row">
-          <div class="mb-3">
+      
+          <div class="col-12 mb-3">
             {% if role %}
                 <input type="hidden" class="form-control" name="role" id="id_role" value="{{ form.role.value|default_if_none:role }}" required>
                 <h4 class="text-center" style="text-transform: uppercase;">jako   
@@ -18,8 +20,8 @@
                           {% endif %}
                          </h4>
             {% else %} 
-                <select class="form-control d-block w-100" name="role" id="id_role" value="{{ form.role.value|default_if_none:'' }}" required>
-                  <option value="">{% trans 'Wybierz swoją role...' %}</option>
+                <select class="selectpicker " name="role" id="id_role" value="{{ form.role.value|default_if_none:'' }}" required title="wybierz role">
+                  
                   <option value="P" {% if role == 'P'%} selected {% endif %}>Piłkarz</option>
                   <option value="T" {% if role == 'T'%} selected {% endif %}>Trener</option>
                   <option value="C" {% if role == 'C'%} selected {% endif %}>Klub / Szkółka piłkarska</option>
@@ -31,28 +33,35 @@
                 {{ form.role.errors }}
             {% endif %}
     {% endwith %}   
-          </div>
-          <div class="col-md-6 mb-3">
-            <input type="text" class="form-control" name="first_name" id="id_first_name" value="{{form.first_name.value|default_if_none:'' }}" placeholder="imię" required="">
-            {{form.first_name.errors}}
-          </div>
-          <div class="col-md-6 mb-3">
-            <input type="text" class="form-control" name="last_name" id="id_last_name" value="{{form.last_name.value|default_if_none:''}}" placeholder="nazwisko" required>
-            {{form.last_name.errors}}
-          </div>
         </div>
+
+        <div class="col-md-6 mb-3">
+          <input type="text" class="form-control" name="first_name" id="id_first_name" value="{{form.first_name.value|default_if_none:'' }}" placeholder="imię" required="">
+          {{form.first_name.errors}}
+        </div>
+
+        <div class="col-md-6 mb-3">
+          <input type="text" class="form-control" name="last_name" id="id_last_name" value="{{form.last_name.value|default_if_none:''}}" placeholder="nazwisko" required>
+          {{form.last_name.errors}}
+        </div>
+
         
-        <div class="mb-3">
+        <div class="col-12 mb-3">
             <input type="email" class="form-control" name="email" id="id_email" value="{{form.email.value|default_if_none:''}}" placeholder="email"  required>            
             {{form.email.errors}}
         </div>
 
-        <div class="mb-3">
+        <div class="col-12 mb-3">
             <input type="password" class="form-control" name="password1" id="id_password1"  value="{{form.password1.value|default_if_none:''}}" placeholder="hasło" required>
             {{form.password.errors}}
         </div>
+
+        <div class="col-12 mb-3">
         <button class="btn-block" type="submit">{% trans 'ZAKŁADAM DARMOWE KONTO' %}</button>
-        <p class="text-right"><small>{% trans 'lub jeżeli masz już konto'%} <a href="{% url account_login %}">{% trans 'zaloguj się' %}</a></small></p>
+          <p class="text-right">
+            <small>{% trans 'lub jeżeli masz już konto'%} <a href="{{ login_url }}">{% trans 'zaloguj się' %}</a></small>
+          </p>
+        </div>
 
         <hr class="mb-4">
 
@@ -64,38 +73,47 @@
         {% endif %}
        
         {{ form.errors }} {# @todo to be removed #}
-
-          <p class='small' style="text-align: center; padding-top:10px;"> <i>lub</i></p>
-          {% include 'account/partials/_social.html'%}
-
-
-        <hr class="mb-4">
-        <div class="terms custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" name="rules" id="id_rules" required hidden checked>
-            <label class="custom-control-label" for="id_rules">
-                <i class="icofont-law-document"></i> {% trans 'Rejestrując się potwierdzasz, że zapoznałeś się z ' %}<a href="/regulamin" target="_blank">{% trans 'regulaminem PlayMaker.pro' %}</a> {% trans 'oraz akceptujesz jego warunki.' %} </label>
+        <div class="col-12 text-center mb-3">
+              <span class='small'> lub użyj</span>
         </div>
-    <div class="terms custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" name="rodo" id="id_rodo" required hidden checked>
-            <label class="custom-control-label" for="id_rodo"> 
-                <i class="icofont-info-circle"></i> {% trans 'Twoje dane administruje PlayMaker.pro. ' %} 
+        <div class="col-12"> 
+          {% include 'account/partials/_social.html'%}
+        </div>
+
+        <hr class="mb-5">
+
+        <div class="terms col-12">
           
-                <span class="accordion" id="rodo-terms">
-                      <span id="headingOne">
-                          <a class="text-left"  data-toggle="collapse" data-target="#rodoCollapse" aria-expanded="true" aria-controls="rodoCollapse">
-                            {% trans 'Więcej o ochronie danych' %}<i class="icofont-thin-down"></i>
-                          </a>
-                        </span>
-                  
-                      <div id="rodoCollapse" class="collapse" aria-labelledby="headingOne" data-parent="#rodo-terms">
-                        <div class="card-body">
-                          {% trans "@todo Anim pariatur cliche reprehenderit, vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS." %}  
-                          <a href="/rodo" target="_blank">{% trans 'czytaj więcej ' %}</a>
-                        </div>
-                      </div>
-                    
-                    </span>
+            <label class="" for="id_rules">
+                <i class="icofont-law-document"></i> {% trans 'Rejestrując się potwierdzasz, że zapoznałeś się z ' %}<a href="/regulamin" target="_blank">{% trans 'regulaminem PlayMaker.pro' %}</a> {% trans 'oraz akceptujesz jego warunki.' %} 
             </label>
         </div>
+
+        <div class="terms col-12">
+            
+              <label  for="id_rodo"> 
+                  <i class="icofont-info-circle"></i> {% trans 'Twoje dane administruje PlayMaker.pro. ' %} 
+            
+                    <span class="accordion" id="rodo-terms">
+                          <span id="headingOne">
+                              <a class="text-left"  data-toggle="collapse" data-target="#rodoCollapse" aria-expanded="true" aria-controls="rodoCollapse">
+                                {% trans 'Więcej o ochronie danych' %}<i class="icofont-thin-down"></i>
+                              </a>
+                            </span>
+                      
+                          <div id="rodoCollapse" class="collapse" aria-labelledby="headingOne" data-parent="#rodo-terms">
+                            <div class="card-body">
+                              {% trans "@todo Anim pariatur cliche reprehenderit, vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS." %}  
+                              <a href="/rodo" target="_blank">{% trans 'czytaj więcej ' %}</a>
+                            </div>
+                          </div>
+                        
+                      </span>
+              </label>
+          </div>
+
+
+
       </form>
+ {% endspaceless %}
     
